# cadence-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  run_api.py  run_web.py  server.json  smithery.yaml
cadence/: __init__.py  api.py  config.py  copy_guard.py  db.py  docx_plan.py  reminders.py  rhythm.py  safety.py  server.py  signals.py  tools.py  vault.py  web.py
docs/: ai-integration.md
tests/: test_api.py  test_copy_guard.py  test_reminders.py  test_rhythm.py  test_safety.py  test_server.py  test_signals.py  test_tools.py  test_web.py
web/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
