[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cadence-mcp"
version = "0.2.0"
description = "ADHD and bipolar disorder daily-rhythm support MCP server — 23 tools, zero dependencies, stdio JSON-RPC"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []
keywords = ["mcp", "adhd", "bipolar", "mental-health", "ipsrt", "wellbeing", "productivity"]
authors = [
  { name = "RYOSEIWORLD" }
]

[project.urls]
Homepage = "https://github.com/imai-design/cadence-mcp"
Repository = "https://github.com/imai-design/cadence-mcp"
"Bug Tracker" = "https://github.com/imai-design/cadence-mcp/issues"

[project.scripts]
cadence-mcp = "cadence.server:main"

[tool.setuptools.packages.find]
include = ["cadence*"]
